[package]
name = "ssctl"
version = "0.1.0"
edition = "2024"
description = "Superset agent/session orchestration helper"
publish = false

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4", features = ["derive"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
