[package]
name = "ssctl"
version = "0.2.1"
edition = "2024"
description = "Rust CLI for orchestrating Superset terminal-backed agent sessions"
license = "MIT"
repository = "https://github.com/fpdy/ssctl"
keywords = ["superset", "agents", "terminal", "cli"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4", features = ["derive"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2"
